fix span on IOS

--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -43,7 +43,8 @@ span {
 span p {
   margin: 0;
 }
-#skills span .description {
+
+.description {
   font-size: 15px;
   text-wrap: wrap;
   width: 100%;
@@ -76,7 +77,7 @@ span p {
     width: 100%;
   }
 
-  #skills span .description {
+  .description {
     font-size: 15px;
     text-wrap: wrap;
     width: 100%;
